--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "start": "npm run build && node dist/server.js",
+    "start": "nodemon src/server.js",
     "start:dev": "babel-node src/server.js",
     "test": "echo \"Error: no test specified\" $$ exit 1"
   },
@@ -16,6 +16,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1"
-  }
+    "@babel/preset-env": "^7.12.1",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "supertest": "^6.0.1"
+  },
+  "type": "module"
 }
