--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",
-    "supertest": "^6.0.1"
+    "@babel/preset-env": "^7.12.1"
   },
   "type": "module"
 }
