--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.1"
-  },
-  "type": "module"
+  }
 }
