--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.8",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-acl": "^2.0.2",
+    "mongoose": "^5.11.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
